<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jsanchezv.jspeccy</groupId>
    <artifactId>jspeccy</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.0</version>
        <relativePath/>
    </parent>

    <properties>
        <java.version>11</java.version>

        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Maven plug-in versions -->
        <jaxb2-maven-plugin.version>3.0.0</jaxb2-maven-plugin.version>
        <launch4j-maven-plugin.version>2.1.1</launch4j-maven-plugin.version>
        <spotbugs-maven-plugin.version>4.5.0.0</spotbugs-maven-plugin.version>

        <!-- Third party dependencies' versions -->
        <activation.version>2.0.1</activation.version>
        <jakarta.xml.bind-api.version>3.0.1</jakarta.xml.bind-api.version>
        <jaxb-core.version>3.0.2</jaxb-core.version>
        <jaxb-impl.version>3.0.2</jaxb-impl.version>
        <owasp-dependency-check-maven.version>6.5.0</owasp-dependency-check-maven.version>

        <spring-boot-maven-plugin.finalName>JSpeccy</spring-boot-maven-plugin.finalName>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.sun.activation</groupId>
            <artifactId>jakarta.activation</artifactId>
            <version>${activation.version}</version><!--$NO-MVN-MAN-VER$-->
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>${jakarta.xml.bind-api.version}</version><!--$NO-MVN-MAN-VER$-->
        </dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-core</artifactId>
            <version>${jaxb-core.version}</version>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-impl</artifactId>
            <version>${jaxb-impl.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <!-- The following import is required to bring in the @Contended annotation into the default -->
                    <!-- module so that we can use it to prevent false memory sharing                            -->
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.evolvedbinary.maven.mojohaus</groupId>
                <artifactId>jaxb-maven-plugin</artifactId>
                <version>${jaxb2-maven-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.sun.activation</groupId>
                        <artifactId>jakarta.activation</artifactId>
                        <version>${activation.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>xjc</id>
                        <goals>
                            <goal>xjc</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <sources>
                        <source>src/main/resources/schema/${spring-boot-maven-plugin.finalName}.xsd</source>
                    </sources>
                    <packageName>jakarta.xml.bind.annotation</packageName>
                    <catalog>catalog.xml</catalog>
                    <target>3.0</target>
                    <packageName>configuration</packageName>
                    <outputDirectory>${project.build.directory}/generated-sources/xjc/src/main/java</outputDirectory>
                    <clearOutputDir>true</clearOutputDir>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>${spotbugs-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>spotbugs</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>spotbugs</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <skip>false</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${project.build.directory}/generated-sources/xjc/src/main/java</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <executable>true</executable>
                    <jvmArguments>
                        -Xdebug
                        -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8888
                    </jvmArguments>
                    <finalName>${spring-boot-maven-plugin.finalName}</finalName>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
        	<plugins>
                <plugin>
                    <groupId>org.owasp</groupId>
                    <artifactId>dependency-check-maven</artifactId>
                    <version>${owasp-dependency-check-maven.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!-- This plugin's configuration is used to store Visual Studio code / Eclipse m2e settings only. -->
                <!-- It has no influence on the Maven build itself. -->
        		<plugin>
        			<groupId>org.eclipse.m2e</groupId>
        			<artifactId>lifecycle-mapping</artifactId>
        			<version>1.0.0</version>
        			<configuration>
        				<lifecycleMappingMetadata>
        					<pluginExecutions>
        						<pluginExecution>
        							<pluginExecutionFilter>
        								<groupId>com.github.spotbugs</groupId>
        								<artifactId>spotbugs-maven-plugin</artifactId>
        								<versionRange>[4.5.0.0,)</versionRange>
        								<goals>
        									<goal>spotbugs</goal>
        								</goals>
        							</pluginExecutionFilter>
        							<action>
                                        <ignore/>
        							</action>
        						</pluginExecution>
        					</pluginExecutions>
        				</lifecycleMappingMetadata>
        			</configuration>
        		</plugin>
        	</plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>owasp</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.owasp</groupId>
                        <artifactId>dependency-check-maven</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!-- this profile adds experimental support for building Windows executables -->
            <id>launch4j</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.akathist.maven.plugins.launch4j</groupId>
                        <artifactId>launch4j-maven-plugin</artifactId>
                        <version>${launch4j-maven-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>l4j-clui</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>launch4j</goal>
                                </goals>
                                <configuration>
                                    <headerType>console</headerType>
                                    <dontWrapJar>true</dontWrapJar>
                                    <jar>${spring-boot-maven-plugin.finalName}.${project.packaging}</jar>
                                    <outfile>${project.build.directory}/${spring-boot-maven-plugin.finalName}.exe</outfile>
                                    <downloadUrl>https://github.com/doraemoncito/JSpeccy</downloadUrl>
                                    <classPath>
                                        <mainClass>org.springframework.boot.loader.JarLauncher</mainClass>
                                        <addDependencies>true</addDependencies>
                                        <preCp>anything</preCp>
                                    </classPath>
                                    <jre>
                                        <bundledJre64Bit>false</bundledJre64Bit>
                                        <bundledJreAsFallback>false</bundledJreAsFallback>
                                        <minVersion>${java.version}</minVersion>
                                        <jdkPreference>preferJre</jdkPreference>
                                        <runtimeBits>64</runtimeBits>
                                    </jre>
                                    <versionInfo>
                                        <fileVersion>1.0.0.0</fileVersion>
                                        <txtFileVersion>${project.version}</txtFileVersion>
                                        <fileDescription>${project.name}</fileDescription>
                                        <copyright>JSpeccy</copyright>
                                        <productVersion>1.0.0.0</productVersion>
                                        <txtProductVersion>1.0.0.0</txtProductVersion>
                                        <productName>${project.name}</productName>
                                        <internalName>${spring-boot-maven-plugin.finalName}</internalName>
                                        <originalFilename>${spring-boot-maven-plugin.finalName}.exe</originalFilename>
                                    </versionInfo>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
